# tahini-sidecar

./: .gitignore  BUILD  Dockerfile.client  Dockerfile.server  README.md  docker-compose.yml  e_sidecar.c  u_main.c  u_util.c  u_util.h
.github/workflows/: build-fizz.yml
examples/rpc-client/: Cargo.toml
examples/rpc-client/src/: main.rs
examples/rpc-server/: Cargo.toml
examples/rpc-server/src/: main.rs
infra/terraform/: .terraform.tfstate.lock.info  cloud-init.yaml  main.tf  outputs.tf  variables.tf
scripts/: client-entrypoint.sh  demo-down.sh  server-entrypoint.sh
